--- a/index.html
+++ b/index.html
@@ -14,12 +14,33 @@
             <h1>Stan Dream Cocktails</h1>
         </div>
     </header>
+
+    <!-- Section présentation -->
+    <section class="presentation">
+        <img src="images/profile.jpg" alt="Photo de profil" class="profile-photo">
+        <div class="presentation-text">
+            <h2>L’art des Cocktails, La magie des moments</h2>
+            <p>Transformez vos moments en souvenirs inoubliables.</p>
+            <p>Bonjour, je suis A. Standly, un jeune entrepreneur, passionné de bartending et créateur d’expériences uniques. Avec des années d’expertise et des formations spécialisées, je conçois des cocktails raffinés pour sublimer vos événements : anniversaires, mariages, baptêmes, soirées entre amis ou moments en amoureux.</p>
+            <p>Mon objectif ? Faire de chaque occasion une expérience mémorable avec des créations sur mesure, une ambiance chaleureuse et un service professionnel.</p>
+        </div>
+    </section>
+
     <main class="cocktail-container">
-        <!-- Les cartes des cocktails seront générées dynamiquement via script.js -->
+        <!-- Les cartes des cocktails seront insérées ici via script.js -->
     </main>
+
+    <!-- Section contacts -->
+    <section class="contact">
+        <h2>Contactez-moi</h2>
+        <p>📱 <strong>WhatsApp uniquement :</strong> +32 466 35 32 17</p>
+        <p>✉️ <strong>Email :</strong> <a href="mailto:Standreamland@gmail.com">Standreamland@gmail.com</a></p>
+    </section>
+
     <footer>
         <p>&copy; 2025 Stan Dream Cocktails. Tous droits réservés.</p>
     </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
