--- a/index.html
+++ b/index.html
@@ -16,15 +16,23 @@
     </header>
 
     <!-- Section présentation -->
-    <section class="presentation">
+<section class="presentation">
+    <div class="profile-block">
         <img src="images/profile.jpg" alt="Photo de profil" class="profile-photo">
-        <div class="presentation-text">
-            <h2>L’art des Cocktails, La magie des moments</h2>
-            <p>Transformez vos moments en souvenirs inoubliables.</p>
-            <p>Bonjour, je suis A. Standly, un jeune entrepreneur, passionné de bartending et créateur d’expériences uniques. Avec des années d’expertise et des formations spécialisées, je conçois des cocktails raffinés pour sublimer vos événements : anniversaires, mariages, baptêmes, soirées entre amis ou moments en amoureux.</p>
-            <p>Mon objectif ? Faire de chaque occasion une expérience mémorable avec des créations sur mesure, une ambiance chaleureuse et un service professionnel.</p>
-        </div>
-    </section>
+        <h2>L’art des Cocktails, La magie des moments</h2>
+        <p>Transformez vos moments en souvenirs inoubliables.</p>
+        <p>
+            Bonjour, je suis A. Standly, un jeune entrepreneur, passionné de bartending et créateur d’expériences uniques. 
+            Avec des années d’expertise et des formations spécialisées, je conçois des cocktails raffinés pour sublimer vos événements : 
+            anniversaires, mariages, baptêmes, soirées entre amis ou moments en amoureux.
+        </p>
+        <p>
+            Mon objectif ? Faire de chaque occasion une expérience mémorable avec des créations sur mesure, une ambiance chaleureuse 
+            et un service professionnel.
+        </p>
+    </div>
+</section>
+
 
     <main class="cocktail-container">
         <!-- Les cartes des cocktails seront insérées ici via script.js -->
