Ajout-avec-succes3

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
     <footer>
         <p>&copy; 2025 Stan Dream Cocktails. Tous droits réservés.</p>
+        <p>Site réalisé par Marc_Foe.</p>
     </footer>
 
     <script src="script.js"></script>
